2009-09-19  Alberto Garcia  <agarcia@igalia.com>

	* src/dlwin.c (dlwin_download_file):
	Make sure that the 'text' string is NULL-terminated when the
	number of characters exceeds the buffer size.

2009-09-19  Alberto Garcia  <agarcia@igalia.com>

	* src/audio.c (bus_call, lastfm_audio_init, lastfm_audio_clear)
	Remove unused GMainLoop.

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac
	* src/Makefile.am
	* src/compat.[ch]
	Implementations of gdk_threads_add_* for old systems.

	* src/*.c
	Include "compat.h" when needed.

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.c (lastfm_ws_get_friends)
	* src/audio.c (audio_mixer_init):
	Use g_ascii_strcasecmp() instead of strcasecmp()

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* src/dlwin.c
	(+update_window):
	Install a timeout handler to update the progressbar every 100
	miliseconds, instead of doing it everytime curl returns new data.
	(+dlwin_progress_cb, +dlwin_destroy, -dlwin_cleanup)
	(dlwin_download_file_thread, +dlwin_download_file_idle)
	(dlwin_download_file):
	Make dlwin a VglObject.
	Use an idle handler to run the callback and update the window
	after the download has finished.

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.c (lastfm_ws_radio_get_playlist):
	Regression fix: return custom playlist if available.

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c
	(vgl_main_window_show_status_msg):
	Use gdk_threads_add_timeout() to add timeouts.

	* src/controller.c
	(controller_audio_started_cb, controller_set_stop_after):
	Use gdk_threads_add_timeout_seconds() to add timeouts.

	* configure.ac
	* src/globaldefs.h:
	Compatibility macro for old versions of GTK without
	gdk_threads_add_timeout_seconds()

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-tray-icon.c
	(-notify_playback_thread, +notify_playback_idle)
	(show_notification, -get_album_cover_icon)
	Use an idle handler to show the tray icon notification.